--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -85,7 +85,7 @@
  <!--  -->         
           
 <div id="chibipage">
-    <img src="SIteImage/paintchibi.JPG" alt="CatModeling" width="336">
+    <img src="SIteImage/peaches.jpg" alt="CatModeling" width="336">
   
 </div>
        <div id="CHIBI"><a href="ChibiPage.html"> 🍑Chibi 🍑  </a> </div>
