--- a/proyecto/AboutMe.html
+++ b/proyecto/AboutMe.html
@@ -122,6 +122,7 @@
     <a href="https://www.instagram.com/maakaleejr/" title="MaakaLeeJr on Instagram"> <img src="SIteImage/instagramicon.jfif" alt="InstagramIcon" width="50" height="50"></a>
              </li>
 </ul>
+      &copy; 2019 All Rights Reserved - |Mishi Aunti|  
        </footer>
     </body>
 </html>
