--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -123,7 +123,7 @@
   </li>
   
 </ul>
-       &copy; 2019 All Rights Reserved - |Mishi Aunti|  
+       &copy; 2019 All Rights Reserved - |Zoelee Cuevas Rodríguez|  
        </footer>
        </body> 
 
