--- a/proyecto/ChibiPage.html
+++ b/proyecto/ChibiPage.html
@@ -68,7 +68,7 @@
     <a href="https://www.instagram.com/maakaleejr/" title="MaakaLeeJr on Instagram"> <img src="SIteImage/instagramicon.jfif" alt="InstagramIcon" width="50" height="50"></a>
   </li>
 </ul>
-         &copy; 2019 All Rights Reserved - |Mishi Aunti|  
+         &copy; 2019 All Rights Reserved - |Zoelee Cuevas Rodríguez|  
        </footer>
        </body> 
 
